--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=9088
 
+#MySQL configuration : JDBC Driver, JDBC URL, Username et Password
+spring.datasource.url=jdbc:mysql://localhost:3306/EmployeesManagementSystem?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=rootroot
+
+#Hibernate properties : org.hibernate.dialect.MySQL8InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#create tables, other option create, create-drop
+spring.jpa.hibernate.ddl-auto=update
