V2 créer Entity Employee, rajout des fichiers(récapitulatif), system auto-génère la table employees dans la BDD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.password=rootroot
 
 #Hibernate properties : org.hibernate.dialect.MySQL8InnoDBDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#create tables, other option create, create-drop
+#create tables, other option create, create-drop, générer table
 spring.jpa.hibernate.ddl-auto=update
